# 42_Piscine-Python

./: README.md
A-Maze-ing/: .gitignore  Makefile  PROJECT_DOCUMENTATION.md  README.md  a_maze_ing.py  pyproject.toml
A-Maze-ing/mazegen/: generator.py
module 03/ex0/: ft_command_quest.py
module 03/ex1/: ft_score_analytics.py
module 03/ex2/: ft_coordinate_system.py
module 03/ex3/: ft_achievement_tracker.py
module 03/ex4/: ft_inventory_system.py
module 03/ex5/: ft_data_stream.py
module 03/ex6/: ft_analytics_dashboard.py
module01/ex0/: ft_garden_intro.py
module01/ex1/: ft_garden_data.py
module01/ex2/: ft_plant_growth.py
module01/ex3/: ft_plant_factory.py
module01/ex4/: ft_garden_security.py
module01/ex5/: ft_plant_types.py
module01/ex6/: ft_garden_analytics.py
module02/ex00/: ft_first_exception.py
module02/ex01/: ft_different_errors.py
module02/ex02/: ft_custom_errors.py
module02/ex03/: ft_finally_block.py
module02/ex04/: ft_raise_errors.py
module02/ex05/: ft_garden_management.py
module03/ex00/: ft_command_quest.py
module03/ex01/: ft_score_analytics.py
module03/ex02/: ft_coordinate_system.py
module03/ex03/: ft_achievement_tracker.py
module03/ex04/: ft_inventory_system.py
module03/ex05/: ft_data_stream.py
module03/ex06/: ft_analytics_dashboard.py
module04/ex00/: data_generator.py  ft_ancient_text.py
module04/ex01/: ft_archive_creation.py
module04/ex02/: ft_stream_management.py
module04/ex04/: data_generator.py  (+1 more)
module06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
(+47 files in other folders)
