[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A simple maze generator module"
authors = [{name = "Ryan", email = "ryan@student.42.fr"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/Vibes33/42_Piscine-Python"

[tool.setuptools.packages.find]
include = ["mazegen*"]
